Testing LinkedIn social media link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Alfredo Finol</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -63,16 +63,16 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Alfredo
+          <span class="text-primary">Finol</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">926 Samuel Roman Rojas Av · Rancagua, Chile · +56 (9) 3487-4823 ·
+          <a href="mailto:afinol@gmail.com">afinol@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in"><a href="">https://www.linkedin.com/in/alfredo-finol-linux-sysadmin/</a> </i>
           </a>
           <a href="#">
             <i class="fab fa-github"></i>
@@ -286,11 +286,11 @@
   </div>
 
   <!-- Plugin JavaScript -->
-  <script type="text/javascript" src="vendor/jquery-easing/jquery.easing.js"></script>
+  <script type="text/javascript" src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="vendor/jquery/jquery.js"></script>
-  <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.bundle.js"></script>
+  <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
+  <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
