Testing profile image

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a href="https://twitter.com/adlpaf">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.instagram.com/adlpaf.photo">
             <i class="fab fa-instagram"></i>
           </a>
         </div>
