--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">926 Samuel Roman Rojas Av · Rancagua, Chile · +56 (9) 3487-4823 ·
           <a href="mailto:afinol@gmail.com">afinol@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am experienced in GNU/Linux System Administrator, and beginer in agile frameworks like Laravel, Django and VueJS. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/alfredo-finol-linux-sysadmin/">
             <i class="fab fa-linkedin-in"></i>
