--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <i class="fab fa-css3-alt"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <i class="fab fa-js"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-angular"></i>
