--- a/index.html
+++ b/index.html
@@ -191,16 +191,16 @@
             <i class="fab fa-js"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <i class="fab fa-vuejs"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i class="fab fa-laravel"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+            <i class="fab fa-linux"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
+            <i class="fab fa-wordpress"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-less"></i>
@@ -209,13 +209,10 @@
             <i class="fab fa-wordpress"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
             <i class="fab fa-npm"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-database"></i>
           </li>
         </ul>
 
