--- a/index.html
+++ b/index.html
@@ -194,25 +194,25 @@
             <i class="fab fa-vuejs"></i>
           </li>
           <li class="list-inline-item">
+            <i class="fab fa-php"></i>
+          </li>
+          <li class="list-inline-item">
             <i class="fab fa-laravel"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-wordpress"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-linux"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
+            <i class="fab fa-docker"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <i class="fab fa-terminal"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-database"></i>
+            <i class="fab fa-trello"></i>
           </li>
         </ul>
 
