--- a/index.html
+++ b/index.html
@@ -200,19 +200,19 @@
             <i class="fab fa-laravel"></i>
           </li>
           <li class="list-inline-item">
+            <i class="fab fa-python"></i>
+          </li>
+          <li class="list-inline-item">
             <i class="fab fa-wordpress"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-linux"></i>
           </li>
           <li class="list-inline-item">
+            <i class="fab fa-digital-ocean"></i>
+          </li>
+          <li class="list-inline-item">
             <i class="fab fa-docker"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-terminal"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-trello"></i>
           </li>
         </ul>
 
