Testing tech icons

--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@
           <li class="list-inline-item">
             <i class="fab fa-docker"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="fab fa-github"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-database"></i>
+          </li>
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
