--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#awards">Languages</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -244,6 +247,28 @@
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+      <div class="w-100">
+        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Spanish - Native</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            English - Intermediate</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Portuguese - Intermediate</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Italian - Basic</li>
+        </ul>
       </div>
     </section>
 
