Adding languages skill links

--- a/index.html
+++ b/index.html
@@ -254,20 +254,20 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Languages</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Spanish - Native</li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/es">
+            Spanish - Native</a></li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            English - Intermediate</li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/">
+            English - Intermediate</a></li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Portuguese - Intermediate</li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/pt">
+            Portuguese - Intermediate</a></li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Italian - Basic</li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
+            Italian - Basic</a></li>
         </ul>
       </div>
     </section>
