--- a/pt/index.html
+++ b/pt/index.html
@@ -11,15 +11,15 @@
   <title>Alfredo Finol Resume</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="../css/resume.min.css" rel="stylesheet">
 
 </head>
 
@@ -51,6 +51,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#awards">Languages</a>
         </li>
       </ul>
     </div>
@@ -247,17 +250,39 @@
       </div>
     </section>
 
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+      <div class="w-100">
+        <h2 class="mb-5">Languages</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/es">
+            Spanish - Native</a></li>
+          <li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/">
+            English - Intermediate</a></li>
+          <li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/pt">
+            Portuguese - Intermediate</a></li>
+          <li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
+            Italian - Basic</a></li>
+        </ul>
+      </div>
+    </section>
+
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
-  <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="../vendor/jquery/jquery.min.js"></script>
+  <script type="text/javascript" src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script type="text/javascript" src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/resume.min.js"></script>
+  <script src="../js/resume.min.js"></script>
 
 </body>
 
