--- a/es/index.html
+++ b/es/index.html
@@ -38,22 +38,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          <a class="nav-link js-scroll-trigger" href="#about">Acerca de m&iacute;</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Educaci&oacute;n</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Destrezas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Intereses</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Languages</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Idiomas</a>
         </li>
       </ul>
     </div>
@@ -66,10 +66,10 @@
         <h1 class="mb-0">Alfredo
           <span class="text-primary">Finol</span>
         </h1>
-        <div class="subheading mb-5">926 Samuel Roman Rojas Av · Rancagua, Chile · +56 (9) 3487-4823 ·
+        <div class="subheading mb-5">Avenida Samuel Roman Rojas 926 · Rancagua, Chile · +56 (9) 3487-4823 ·
           <a href="mailto:afinol@gmail.com">afinol@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in GNU/Linux System Administrator, and beginer in agile frameworks like Laravel, Django and VueJS. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Tengo experiencia como Administrador de Sistemas GNU/Linux, y estoy iniciando como desarrollador web utilizando los frameworks &aacute;giles como Laravel, Django y VueJS.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/alfredo-finol-linux-sysadmin/">
             <i class="fab fa-linkedin-in"></i>
@@ -91,7 +91,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Experiencia</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
