--- a/es/index.html
+++ b/es/index.html
@@ -96,44 +96,146 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Consultor de desarrollo web</h3>
-            <div class="subheading mb-3">JPV Asociados</div>
+            <div class="subheading mb-3">JPV Asociados - Santiago de Chile - Chile</div>
             <p>Desarrollo de una aplicaci&oacute;n web con Laravel y MySQL, para la generaci&oacute;n de reportes y el env&iacute;o de &eacute;stos a trav&eacute;s de un correo electr&oacute;nico.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">Agosto de 2019 - Septiembre de 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">T&eacute;cnico de recursos inform&aacute;ticos</h3>
+            <div class="subheading mb-3">Universidad del Zulia - Maracaibo - Venezuela</div>
+            <p>
+              Instalaci&oacute;n y configuraci&oacute;n de servidores (web, base de datos, proxy, respaldo, etc). &nbsp;
+              Administraci&oacute;n de correos electronicos. &nbsp;
+              Mantenimiento preventivo y correctivo de servidores en GNU/Linux. &nbsp;
+              Administraci&oacute;n de las bases de datos en MySQL y PostgreSQL. &nbsp;
+              Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores. &nbsp;
+              Desarrollo de aplicaci&oacute;nes web en PHP (nativo) y MySQL.
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">Enero de 2012 - Noviembre de 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Administrador de Infraestructura</h3>
+            <div class="subheading mb-3">Delcos Group - Maracaibo - Venezuela</div>
+            <p>
+              Instalaci&oacute;n y configuraci&oacute;n de los servidores en AWS y locales. &nbsp;
+              Mantenimiento preventivo y correctivo del servidores remotos y local con Debian GNU/Linux. &nbsp;
+              Administraci&oacute;n de bases de datos MySQL y PostgreSQL. &nbsp;
+              Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores (AWS y local). &nbsp;
+              Desarrollo de aplicaci&oacute;nes web com Python (Django) y PostgreSQL.
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">Abril de 2017 - Noviembre de 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Desarrollador PHP Jr</h3>
+            <div class="subheading mb-3">261 ITSolutions - Maracaibo - Venezuela</div>
+            <p>Desarrollo de una API para una aplicaci&oacute;n m&eacute;dica.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">Julio de 2018 - Noviembre de 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Auxiliar docente</h3>
+            <div class="subheading mb-3">UNEFA - Maracaibo - Venezuela</div>
+            <p>Transcripci&oacute;n y dise&ntilde;no de los diferentes libros escrito por los profesores de la instituci&oacute;n.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Mayo de 2008 - Julio de 2009</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Apoyo t&eacute;cnico</h3>
+            <div class="subheading mb-3">REDFEC-LUZ - Maracaibo - Venezuela</div>
+            <p>
+              Mantenimiento correctivo y preventivo de los equipos computacionales de la instituci&oacute;n. &nbsp;
+              Instalaci&oacute;n y configuraci&oacute;n de servidores en Debian GNU/Linux. &nbsp;
+              Instalaci&oacute;n y configuraci&oacute;n de red inal&aacute;mbrica.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Enero de 2007 - Julio de 2009</span>
+          </div>
+        </div>
+  
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Instructor</h3>
+            <div class="subheading mb-3">ITN Consultores Asociados C.A. - Caracas - Venezuela</div>
+            <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Marzo de 2007 - Abril de 2007</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Instructor</h3>
+            <div class="subheading mb-3">Alonzo y Asociados - Caracas - Venezuela</div>
+            <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Enero de 2007 - Febrero de 2007</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Transcriptor</h3>
+            <div class="subheading mb-3">Hacer Sistemas C.A. - Maracaibo - Venezuela</div>
+            <p>Transcribir partidas de nacimientos para el sistema desarrollado por la empresa.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Noviembre de 2006</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">T&eacute;cnico en reparaci&oacute;n y mantenimiento de computadoras</h3>
+            <div class="subheading mb-3">UDESA-LUZ - Maracaibo - Venezuela</div>
+            <p>
+              Mantenimiento preventivo y correctivo de los equipos computacionales. &nbsp;
+              Instalaci&oacute;n de sistemas operativos. &nbsp;
+              Instalaci&oacute;n de distintas aplicaciones inform&aacute;ticas.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Enero de 2003 - Diciembre de 2004</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Analista-Programador</h3>
+            <div class="subheading mb-3">ElectroComputer C.A. - Caracas - Venezuela</div>
+            <p>
+              Desarrollo de aplicaciones en Visual Basic 6.0. &nbsp;
+              Dise&ntilde;o de base de datos. &nbsp;
+              Analisis de sistemas.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Enero de 2000 - Diciembre de 2002</span>
           </div>
         </div>
 
@@ -145,28 +247,45 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5">Educaci&oacute;n</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Universidad del Zulia - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Licenciado en Computaci&oacute;n</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">Marzo de 2002 - Sin concluir</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">URBE - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Diplomado en Ingenier&iacute;a del Software</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">Noviembre de 2005</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">I. U. T. Pedro Emilio Coll - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">T. S. U. en inform&aacute;tica</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Septiembre de 1998 - Julio de 2001</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">E. T. D. Don Jos&eacute; Beracasa - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Bachiller en Ciencias</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Septiembre de 1992 - Julio de 1998</span>
           </div>
         </div>
 
@@ -177,9 +296,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
+        <h2 class="mb-5">Destrezas</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Lenguajes de programaci&oacute;n &amp; Herramientas</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
@@ -219,24 +338,6 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Analize the actual system</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Responsive design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Design database</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Testing app</li>
-        </ul>
       </div>
     </section>
 
