Update spanish language page

--- a/es/index.html
+++ b/es/index.html
@@ -100,7 +100,7 @@
             <p>Desarrollo de una aplicaci&oacute;n web con Laravel y MySQL, para la generaci&oacute;n de reportes y el env&iacute;o de &eacute;stos a trav&eacute;s de un correo electr&oacute;nico.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Agosto de 2019 - Septiembre de 2019</span>
+            <span class="text-primary">Ago 2019 - Sep 2019</span>
           </div>
         </div>
 
@@ -118,7 +118,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Enero de 2012 - Noviembre de 2018</span>
+            <span class="text-primary">Ene 2012 - Nov 2018</span>
           </div>
         </div>
 
@@ -135,7 +135,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Abril de 2017 - Noviembre de 2018</span>
+            <span class="text-primary">Abr 2017 - Nov 2018</span>
           </div>
         </div>
 
@@ -146,7 +146,7 @@
             <p>Desarrollo de una API para una aplicaci&oacute;n m&eacute;dica.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Julio de 2018 - Noviembre de 2018</span>
+            <span class="text-primary">Jul 2018 - Nov 2018</span>
           </div>
         </div>
 
@@ -157,7 +157,7 @@
             <p>Transcripci&oacute;n y dise&ntilde;no de los diferentes libros escrito por los profesores de la instituci&oacute;n.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Mayo de 2008 - Julio de 2009</span>
+            <span class="text-primary">May 2008 - Jul 2009</span>
           </div>
         </div>
 
@@ -172,7 +172,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Enero de 2007 - Julio de 2009</span>
+            <span class="text-primary">Ene 2007 - Jul 2009</span>
           </div>
         </div>
   
@@ -183,7 +183,7 @@
             <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Marzo de 2007 - Abril de 2007</span>
+            <span class="text-primary">Mar 2007 - Abr 2007</span>
           </div>
         </div>
 
@@ -194,7 +194,7 @@
             <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Enero de 2007 - Febrero de 2007</span>
+            <span class="text-primary">Ene 2007 - Feb 2007</span>
           </div>
         </div>
 
@@ -205,7 +205,7 @@
             <p>Transcribir partidas de nacimientos para el sistema desarrollado por la empresa.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Noviembre de 2006</span>
+            <span class="text-primary">Nov 2006</span>
           </div>
         </div>
 
@@ -220,7 +220,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Enero de 2003 - Diciembre de 2004</span>
+            <span class="text-primary">Ene 2003 - Dic 2004</span>
           </div>
         </div>
 
@@ -235,7 +235,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Enero de 2000 - Diciembre de 2002</span>
+            <span class="text-primary">Ene 2000 - Dic 2002</span>
           </div>
         </div>
 
@@ -249,13 +249,13 @@
       <div class="w-100">
         <h2 class="mb-5">Educaci&oacute;n</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Universidad del Zulia - Maracaibo - Venezuela</h3>
             <div class="subheading mb-3">Licenciado en Computaci&oacute;n</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Marzo de 2002 - Sin concluir</span>
+            <span class="text-primary">Mar 2002 - Sin concluir</span>
           </div>
         </div>
 
@@ -265,7 +265,7 @@
             <div class="subheading mb-3">Diplomado en Ingenier&iacute;a del Software</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Noviembre de 2005</span>
+            <span class="text-primary">Nov 2005</span>
           </div>
         </div>
 
@@ -275,7 +275,7 @@
             <div class="subheading mb-3">T. S. U. en inform&aacute;tica</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Septiembre de 1998 - Julio de 2001</span>
+            <span class="text-primary">Sep 1998 - Jul 2001</span>
           </div>
         </div>
 
@@ -285,7 +285,7 @@
             <div class="subheading mb-3">Bachiller en Ciencias</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Septiembre de 1992 - Julio de 1998</span>
+            <span class="text-primary">Sep 1992 - Jul 1998</span>
           </div>
         </div>
 
@@ -355,20 +355,20 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Languages</h2>
+        <h2 class="mb-5">Idiomas</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/es">
-            Spanish - Native</a></li>
+            Espa&ntilde;ol - Nativo</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/">
-            English - Intermediate</a></li>
+            Ingles - Intermedio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/pt">
-            Portuguese - Intermediate</a></li>
+            Portugu&eacute;s - Intermedio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
-            Italian - Basic</a></li>
+            Italiano - Ba\&aacute;sico</a></li>
         </ul>
       </div>
     </section>
