Update portuguese language page

--- a/it/index.html
+++ b/it/index.html
@@ -38,22 +38,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          <a class="nav-link js-scroll-trigger" href="#about">Acerca de m&iacute;</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Educaci&oacute;n</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Destrezas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Languages</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Idiomas</a>
         </li>
       </ul>
     </div>
@@ -66,10 +63,10 @@
         <h1 class="mb-0">Alfredo
           <span class="text-primary">Finol</span>
         </h1>
-        <div class="subheading mb-5">926 Samuel Roman Rojas Av · Rancagua, Chile · +56 (9) 3487-4823 ·
+        <div class="subheading mb-5">Avenida Samuel Roman Rojas 926 · Rancagua, Chile · +56 (9) 3487-4823 ·
           <a href="mailto:afinol@gmail.com">afinol@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in GNU/Linux System Administrator, and beginer in agile frameworks like Laravel, Django and VueJS. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Tengo experiencia como Administrador de Sistemas GNU/Linux, y estoy iniciando como desarrollador web utilizando los frameworks &aacute;giles como Laravel, Django y VueJS.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/alfredo-finol-linux-sysadmin/">
             <i class="fab fa-linkedin-in"></i>
@@ -91,49 +88,151 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Experiencia</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Consultor de desarrollo web</h3>
+            <div class="subheading mb-3">JPV Asociados - Santiago de Chile - Chile</div>
+            <p>Desarrollo de una aplicaci&oacute;n web con Laravel y MySQL, para la generaci&oacute;n de reportes y el env&iacute;o de &eacute;stos a trav&eacute;s de un correo electr&oacute;nico.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">Ago 2019 - Sep 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">T&eacute;cnico de recursos inform&aacute;ticos</h3>
+            <div class="subheading mb-3">Universidad del Zulia - Maracaibo - Venezuela</div>
+            <p>
+              Instalaci&oacute;n y configuraci&oacute;n de servidores (web, base de datos, proxy, respaldo, etc). &nbsp;
+              Administraci&oacute;n de correos electronicos. &nbsp;
+              Mantenimiento preventivo y correctivo de servidores en GNU/Linux. &nbsp;
+              Administraci&oacute;n de las bases de datos en MySQL y PostgreSQL. &nbsp;
+              Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores. &nbsp;
+              Desarrollo de aplicaci&oacute;nes web en PHP (nativo) y MySQL.
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">Ene 2012 - Nov 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Administrador de Infraestructura</h3>
+            <div class="subheading mb-3">Delcos Group - Maracaibo - Venezuela</div>
+            <p>
+              Instalaci&oacute;n y configuraci&oacute;n de los servidores en AWS y locales. &nbsp;
+              Mantenimiento preventivo y correctivo del servidores remotos y local con Debian GNU/Linux. &nbsp;
+              Administraci&oacute;n de bases de datos MySQL y PostgreSQL. &nbsp;
+              Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores (AWS y local). &nbsp;
+              Desarrollo de aplicaci&oacute;nes web com Python (Django) y PostgreSQL.
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">Abr 2017 - Nov 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Desarrollador PHP Jr</h3>
+            <div class="subheading mb-3">261 ITSolutions - Maracaibo - Venezuela</div>
+            <p>Desarrollo de una API para una aplicaci&oacute;n m&eacute;dica.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">Jul 2018 - Nov 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Auxiliar docente</h3>
+            <div class="subheading mb-3">UNEFA - Maracaibo - Venezuela</div>
+            <p>Transcripci&oacute;n y dise&ntilde;no de los diferentes libros escrito por los profesores de la instituci&oacute;n.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2008 - Jul 2009</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Apoyo t&eacute;cnico</h3>
+            <div class="subheading mb-3">REDFEC-LUZ - Maracaibo - Venezuela</div>
+            <p>
+              Mantenimiento correctivo y preventivo de los equipos computacionales de la instituci&oacute;n. &nbsp;
+              Instalaci&oacute;n y configuraci&oacute;n de servidores en Debian GNU/Linux. &nbsp;
+              Instalaci&oacute;n y configuraci&oacute;n de red inal&aacute;mbrica.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Ene 2007 - Jul 2009</span>
+          </div>
+        </div>
+  
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Instructor</h3>
+            <div class="subheading mb-3">ITN Consultores Asociados C.A. - Caracas - Venezuela</div>
+            <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Mar 2007 - Abr 2007</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Instructor</h3>
+            <div class="subheading mb-3">Alonzo y Asociados - Caracas - Venezuela</div>
+            <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Ene 2007 - Feb 2007</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Transcriptor</h3>
+            <div class="subheading mb-3">Hacer Sistemas C.A. - Maracaibo - Venezuela</div>
+            <p>Transcribir partidas de nacimientos para el sistema desarrollado por la empresa.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Nov 2006</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">T&eacute;cnico en reparaci&oacute;n y mantenimiento de computadoras</h3>
+            <div class="subheading mb-3">UDESA-LUZ - Maracaibo - Venezuela</div>
+            <p>
+              Mantenimiento preventivo y correctivo de los equipos computacionales. &nbsp;
+              Instalaci&oacute;n de sistemas operativos. &nbsp;
+              Instalaci&oacute;n de distintas aplicaciones inform&aacute;ticas.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Ene 2003 - Dic 2004</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Analista-Programador</h3>
+            <div class="subheading mb-3">ElectroComputer C.A. - Caracas - Venezuela</div>
+            <p>
+              Desarrollo de aplicaciones en Visual Basic 6.0. &nbsp;
+              Dise&ntilde;o de base de datos. &nbsp;
+              Analisis de sistemas.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Ene 2000 - Dic 2002</span>
           </div>
         </div>
 
@@ -145,28 +244,45 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5">Educaci&oacute;n</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Universidad del Zulia - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Licenciado en Computaci&oacute;n</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">Mar 2002 - Sin concluir</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">URBE - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Diplomado en Ingenier&iacute;a del Software</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">Nov 2005</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">I. U. T. Pedro Emilio Coll - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">T. S. U. en inform&aacute;tica</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sep 1998 - Jul 2001</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">E. T. D. Don Jos&eacute; Beracasa - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Bachiller en Ciencias</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sep 1992 - Jul 1998</span>
           </div>
         </div>
 
@@ -177,9 +293,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
+        <h2 class="mb-5">Destrezas</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Lenguajes de programaci&oacute;n &amp; Herramientas</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
@@ -219,34 +335,6 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Analize the actual system</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Responsive design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Design database</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Testing app</li>
-        </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
     </section>
 
@@ -254,20 +342,20 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Languages</h2>
+        <h2 class="mb-5">Idiomas</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/es">
-            Spanish - Native</a></li>
+            Espa&ntilde;ol - Nativo</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/">
-            English - Intermediate</a></li>
+            Ingles - Intermedio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/pt">
-            Portuguese - Intermediate</a></li>
+            Portugu&eacute;s - Intermedio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
-            Italian - Basic</a></li>
+            Italiano - Ba&aacute;sico</a></li>
         </ul>
       </div>
     </section>
