--- a/es/index.html
+++ b/es/index.html
@@ -107,7 +107,7 @@
             <div class="subheading mb-3">Universidad del Zulia - Maracaibo - Venezuela</div>
             <p>
               Instalaci&oacute;n y configuraci&oacute;n de servidores (web, base de datos, proxy, respaldo, etc). &nbsp;
-              Administraci&oacute;n de correos electronicos. &nbsp;
+              Administraci&oacute;n de correos electr&oacute;nicos. &nbsp;
               Mantenimiento preventivo y correctivo de servidores en GNU/Linux. &nbsp;
               Administraci&oacute;n de las bases de datos en MySQL y PostgreSQL. &nbsp;
               Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores. &nbsp;
