Update spanish language page

--- a/es/index.html
+++ b/es/index.html
@@ -111,7 +111,7 @@
               Mantenimiento preventivo y correctivo de servidores en GNU/Linux. &nbsp;
               Administraci&oacute;n de las bases de datos en MySQL y PostgreSQL. &nbsp;
               Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores. &nbsp;
-              Desarrollo de aplicaci&oacute;nes web en PHP (nativo) y MySQL.
+              Desarrollo de aplicaciones web en PHP (nativo) y MySQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
