Update spanish language page

--- a/es/index.html
+++ b/es/index.html
@@ -128,7 +128,7 @@
               Mantenimiento preventivo y correctivo del servidores remotos y local con Debian GNU/Linux. &nbsp;
               Administraci&oacute;n de bases de datos MySQL y PostgreSQL. &nbsp;
               Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores (AWS y local). &nbsp;
-              Desarrollo de aplicaci&oacute;nes web com Python (Django) y PostgreSQL.
+              Desarrollo de aplicaci&oacute;nes web con Python (Django) y PostgreSQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
