Update spanish language page

--- a/es/index.html
+++ b/es/index.html
@@ -151,7 +151,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Auxiliar docente</h3>
             <div class="subheading mb-3">UNEFA - Maracaibo - Venezuela</div>
-            <p>Transcripci&oacute;n y dise&ntilde;no de los diferentes libros escrito por los profesores de la instituci&oacute;n.</p>
+            <p>Transcripci&oacute;n y dise&ntilde;o de los diferentes libros escrito por los profesores de la instituci&oacute;n.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2008 - Jul 2009</span>
