Update spanish language page

--- a/es/index.html
+++ b/es/index.html
@@ -355,7 +355,7 @@
             Portugu&eacute;s - Intermedio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
-            Italiano - Ba&aacute;sico</a></li>
+            Italiano - B&aacute;sico</a></li>
         </ul>
       </div>
     </section>
